# basis

./: .gitignore  CMakeLists.txt  README.md  conan_imports_manifest.txt  conanfile.py  get_conan_dependencies.cmake
basis/: PluginManager.cc  PluginManager.hpp  SequenceBuffer.hpp  atomic_flag_macros.hpp  base_environment.cc  base_environment.h  base_environment.hpp  bitmask.h  boost_command_line.cc  boost_command_line.hpp  checked_optional.h  checked_optional.hpp  checks_and_guard_annotations.cc  checks_and_guard_annotations.hpp  cmd_util.cc  cmd_util.hpp  concepts.hpp  config.hpp  dependent_false.hpp  doctest_common.h  doctest_common.hpp  doctest_util.cc  doctest_util.h  doctest_util.hpp  enum_set.hpp  exact_cast.h  i18n.cc  i18n.hpp  icu_util.cc  immutable.hpp  is_reference_wrapper.hpp  lock_with_check.cc  lock_with_check.hpp  log_util.cc  log_util.hpp  macros.hpp  move_only.hpp  optimization.hpp  options.hpp  path_provider.cc  (+39 more)
basis/ECS/: asio_registry.cc  asio_registry.hpp  ecs.cc  ecs.h  ecs.hpp  ecs_hierarchies_unittest.cc  global_context.cc  global_context.hpp  network_registry.cc  network_registry.hpp  safe_registry.cc  safe_registry.h  safe_registry.hpp  sequence_local_context.cc  sequence_local_context.h  sequence_local_context.hpp  simulation_registry.cc  simulation_registry.hpp  tags.cc  tags.h  tags.hpp  unsafe_context.cc  unsafe_context.h  unsafe_context.hpp
basis/algorithm/: top_n.hpp  top_n_test.cc
basis/annnotations/: asio_guard_annotations.cc  asio_guard_annotations_unittest.cc
basis/annotations/: asio_guard_annotations.cc  asio_guard_annotations.h
basis/application/: app_runners.cc  app_runners.h  application.cc  application.h  application.hpp  application_configuration.h  application_configuration.hpp  application_state.h  application_state.hpp  export.h  export.hpp  platform_detection.hpp
basis/backoff_entry/: README.md  backoff_entry.cc  backoff_entry.hpp  backoff_entry_serializer.cc  backoff_entry_serializer.hpp  backoff_entry_serializer_unittest.cc  backoff_entry_unittest.cc
basis/bind/: bind_checked.hpp  bind_to_task_runner.h  bind_to_task_runner_unittest.cc  call_count_checker.hpp  callable_hook.cc  callable_hook.hpp  delay_time_checker.cc  delay_time_checker.hpp  dummy_checker.hpp  exec_time_checker.cc  exec_time_checker.h  exec_time_checker.hpp  ptr_checker.hpp  ref_checker.hpp  verify_nothing.hpp
basis/bit_field/: README.md  bit_field.hpp  bit_field_unittest.cc
basis/bloom_filter/: README.md  bloom.cc  bloom.hpp  bloom_unittest.cc  counting_bloom.hpp  counting_bloom_unittest.cc  double_hashing_bloom.cc  double_hashing_bloom.hpp  double_hashing_bloom_unittest.cc  filter_policy.cc  filter_policy.hpp
basis/concept/: concepts.hpp  dependent_false.hpp  is_constructible.hpp
basis/concurrency/: LockFreeProducerConsumerQueue.cpp  LockFreeProducerConsumerQueue.hpp  concurrent_int64.cc  concurrent_int64.hpp  concurrent_int64_unittest.cc  lock_free_producer_consumer_queue.cc  lock_free_producer_consumer_queue.hpp
basis/container/: prioritized_job_dispatcher.cc  prioritized_job_dispatcher.hpp  prioritized_job_dispatcher_unittest.cc  prioritized_list.hpp  prioritized_list_unittest.cc  prioritized_repeating_task_list.cc  prioritized_repeating_task_list.hpp  prioritized_repeating_task_list_unittest.cc  seq_num_buffer.hpp
basis/core/: address.hpp  bitmask.hpp  compile_config.hpp  debug_flag_macros.hpp  enum_limits.hpp  enum_set.hpp  exact_pointer_cast.hpp  immutable.hpp  implicit_cast.hpp  macros.hpp  move_only.hpp  numeric_static_cast.hpp  observable.hpp  observable_unittest.cc  observer.hpp  observer_unittest.cc  optimization_macros.hpp  pimpl.hpp  pointer_cast.hpp  polymorphic_downcast.hpp  polymorphic_upcast.hpp  ptr_element_compare.hpp  retrier.hpp  scoped_cleanup.hpp  scoped_value_saver.hpp  sequence_bound_flag.cc  sequence_bound_flag.hpp  type_name.hpp  typed_enum.hpp  weak_handle.cc  weak_handle.hpp  weak_handle_unittest.cc  with_details.hpp  with_details_test.cc  with_reason.hpp
basis/decimal/: decimal.hpp  decimal_numeric_limits.hpp  decimal_unittest.cc
basis/dependency_hierarchy/: dependency_error_space.cc  dependency_error_space.hpp  dependency_hierarchy.cc  dependency_hierarchy.hpp  dependency_hierarchy_unittest.cc  dependency_util.cc  dependency_util.hpp  dependency_util_unittest.cc
basis/disjoint_sets/: disjoint_sets.hpp  disjoint_sets_unittest.cc
basis/fail_point/: README.md  fail_point.cc  fail_point.hpp  fail_point_unittest.cc
basis/files/: file_path_util.cc  file_path_util.hpp  file_path_util_test.cc  file_util.cc  file_util.hpp  scoped_temp_file.cc  scoped_temp_file.hpp
basis/i18n/: i18n.cc  i18n.hpp  icu_util.cc  icu_util.hpp
basis/interval/: interval.hpp  interval_map.hpp  interval_map_unittest.cc  interval_set.hpp  interval_set_test.cc  interval_test.cc
basis/jsonb/: jsonb.cc  jsonb.hpp  jsonb_unittest.cc
basis/log/: Logger.cpp  Logger.hpp  log_util.cc  logger.cc  logger.hpp  progress_logger.cc  progress_logger.hpp  scoped_log_run_time.cc  scoped_log_run_time.hpp  spacer.cc  spacer.hpp  spacer_test.cc  table_printer.cc  table_printer.hpp  table_printer_test.cc
basis/lru/: estimate_memory_usage_for_lru_cache.hpp  lru.hpp  lru_cache.hpp  lru_cache_unittest.cc  lru_unittest.cc
basis/memory/: any_ptr.h  any_ptr.hpp
basis/metrics/: README.md  metrics.cc  metrics.hpp  metrics_demotest.cc  metrics_unittest.cc
basis/money/: money.hpp  money.test.cpp  money_util.cc  money_util.hpp
basis/multiconfig/: README.md  multiconfig.cc  multiconfig.hpp  multiconfig_unittest.cc  option_parser.cc  option_parser.hpp
basis/numerics/: math_utils.hpp  pack_numbers.hpp  uint128.hpp  (+2 more)
cmake/: Exports.cmake  Findbasis.cmake  Options.cmake  ProjectFiles.cmake  setup_sanitizers.cmake
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
tests/: CMakeLists.txt  Foo.h  doctest_test.cc  fakeit.test.cpp  gmock.test.cpp  gtest_test_runner.cmake  i18n.test.cpp  main.cpp  main_catch.cpp  main_gtest.cpp  money.test.cpp  perf_test_runner.cmake  pimpl.impl.cpp  pimpl.test.cpp  test_data_files.cmake  test_sources.cmake
(+313 files in other folders)
